--- a/index.html
+++ b/index.html
@@ -159,6 +159,12 @@
 		{ fecha: "10/05/2024", total: 61, unico: 59 },
 		{ fecha: "11/05/2024", total: 9, unico: 8 },
 		{ fecha: "12/05/2024", total: 3, unico: 2 },
+		{ fecha: "13/05/2024", total: 59, unico: 52 },
+		{ fecha: "14/05/2024", total: 79, unico: 70 },
+		{ fecha: "15/05/2024", total: 70, unico: 64 },
+		{ fecha: "16/05/2024", total: 90, unico: 84 },
+		{ fecha: "17/05/2024", total: 90, unico: 79 },
+		{ fecha: "18/05/2024", total: 16, unico: 16 },
             ]
 			
 			
