--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
 		{ fecha: "16/05/2024", total: 90, unico: 84 },
 		{ fecha: "17/05/2024", total: 90, unico: 79 },
 		{ fecha: "18/05/2024", total: 16, unico: 16 },
+		{ fecha: "19/05/2024", total: 1, unico: 1 },
             ]
 			
 			
