--- a/index.html
+++ b/index.html
@@ -166,6 +166,13 @@
 		{ fecha: "17/05/2024", total: 90, unico: 79 },
 		{ fecha: "18/05/2024", total: 16, unico: 16 },
 		{ fecha: "19/05/2024", total: 1, unico: 1 },
+		{ fecha: "20/05/2024", total: 54, unico: 47 },
+		{ fecha: "21/05/2024", total: 79, unico: 73 },
+		{ fecha: "22/05/2024", total: 138, unico: 133 },
+		{ fecha: "23/05/2024", total: 68, unico: 64 },
+		{ fecha: "24/05/2024", total: 96, unico: 93 },
+		{ fecha: "25/05/2024", total: 16, unico: 16 },
+		{ fecha: "26/05/2024", total: 0, unico: 0 },
             ]
 			
 			
