--- a/index.html
+++ b/index.html
@@ -173,6 +173,14 @@
 		{ fecha: "24/05/2024", total: 96, unico: 93 },
 		{ fecha: "25/05/2024", total: 16, unico: 16 },
 		{ fecha: "26/05/2024", total: 0, unico: 0 },
+		{ fecha: "27/05/2024", total: 69, unico: 62 },
+		{ fecha: "28/05/2024", total: 57, unico: 53 },
+		{ fecha: "29/05/2024", total: 58, unico: 58 },
+		{ fecha: "30/05/2024", total: 49, unico: 47 },
+		{ fecha: "31/05/2024", total: 32, unico: 32 },
+		{ fecha: "01/06/2024", total: 17, unico: 14 },
+		{ fecha: "02/06/2024", total: 0, unico: 0 },
+		{ fecha: "03/06/2024", total: 55, unico: 51 },
             ]
 			
 			
