--- a/index.html
+++ b/index.html
@@ -187,6 +187,20 @@
 		{ fecha: "07/06/2024", total: 42, unico: 39 },
 		{ fecha: "08/06/2024", total: 9, unico: 8 },
 		{ fecha: "09/06/2024", total: 1, unico: 1 },
+		{ fecha: "10/06/2024", total: 70, unico: 66 },
+		{ fecha: "11/06/2024", total: 42, unico: 39 },
+		{ fecha: "12/06/2024", total: 64, unico: 61 },
+		{ fecha: "13/06/2024", total: 75, unico: 67 },
+		{ fecha: "14/06/2024", total: 29, unico: 27 },
+		{ fecha: "15/06/2024", total: 12, unico: 12 },
+		{ fecha: "16/06/2024", total: 2, unico: 2 },
+		{ fecha: "17/06/2024", total: 47, unico: 41 },
+		{ fecha: "18/06/2024", total: 59, unico: 55 },
+		{ fecha: "19/06/2024", total: 53, unico: 52 },
+		{ fecha: "20/06/2024", total: 33, unico: 29 },
+		{ fecha: "21/06/2024", total: 40, unico: 37 },
+		{ fecha: "22/06/2024", total: 11, unico: 11 },
+		{ fecha: "23/06/2024", total: 0, unico: 0 },
             ]
 			
 			
