--- a/index.html
+++ b/index.html
@@ -201,6 +201,13 @@
 		{ fecha: "21/06/2024", total: 40, unico: 37 },
 		{ fecha: "22/06/2024", total: 11, unico: 11 },
 		{ fecha: "23/06/2024", total: 0, unico: 0 },
+		{ fecha: "24/06/2024", total: 31, unico: 29 },
+		{ fecha: "25/06/2024", total: 44, unico: 44 },
+		{ fecha: "26/06/2024", total: 48, unico: 45 },
+		{ fecha: "27/06/2024", total: 29, unico: 29 },
+		{ fecha: "28/06/2024", total: 57, unico: 56 },
+		{ fecha: "29/06/2024", total: 18, unico: 17 },
+		{ fecha: "30/06/2024", total: 2, unico: 2 },
             ]
 			
 			
