--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 		{ fecha: "27/06/2024", total: 29, unico: 29 },
 		{ fecha: "28/06/2024", total: 57, unico: 56 },
 		{ fecha: "29/06/2024", total: 18, unico: 17 },
-		{ fecha: "30/06/2024", total: 2, unico: 2 },
+		{ fecha: "30/06/2024", total: 2, unico: 2 }
             ]
 			
 			
