--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                     return item.total
                 })
 
-                var maxYValue = Math.max(...seriesTotal, ...seriesUnico)
+                var maxYValue = Math.max(...seriesUnico, ...seriesTotal)
 
                 option = {
                     color: ["#FF0087", "#37A2FF"],
