--- a/index.html
+++ b/index.html
@@ -207,7 +207,13 @@
 		{ fecha: "27/06/2024", total: 29, unico: 29 },
 		{ fecha: "28/06/2024", total: 57, unico: 56 },
 		{ fecha: "29/06/2024", total: 18, unico: 17 },
-		{ fecha: "30/06/2024", total: 2, unico: 2 }
+		{ fecha: "30/06/2024", total: 2, unico: 2 },
+		{ fecha: "01/07/2024", total: 19, unico: 19 },
+		{ fecha: "02/07/2024", total: 37, unico: 36 },
+		{ fecha: "03/07/2024", total: 33, unico: 33 },
+		{ fecha: "04/07/2024", total: 42, unico: 39 },
+		{ fecha: "05/07/2024", total: 30, unico: 28 },
+		{ fecha: "06/07/2024", total: 9, unico: 8 },
             ]
 			
 			
