--- a/index.html
+++ b/index.html
@@ -214,6 +214,14 @@
 		{ fecha: "04/07/2024", total: 42, unico: 39 },
 		{ fecha: "05/07/2024", total: 30, unico: 28 },
 		{ fecha: "06/07/2024", total: 9, unico: 8 },
+		{ fecha: "07/07/2024", total: 0, unico: 0 },
+		{ fecha: "08/07/2024", total: 37, unico: 34 },
+		{ fecha: "09/07/2024", total: 32, unico: 28 },
+		{ fecha: "10/07/2024", total: 58, unico: 56 },
+		{ fecha: "11/07/2024", total: 25, unico: 24 },
+		{ fecha: "12/07/2024", total: 39, unico: 38 },
+		{ fecha: "13/07/2024", total: 6, unico: 6 },
+		{ fecha: "14/07/2024", total: 1, unico: 1 },
             ]
 			
 			
