--- a/index.html
+++ b/index.html
@@ -222,6 +222,13 @@
 		{ fecha: "12/07/2024", total: 39, unico: 38 },
 		{ fecha: "13/07/2024", total: 6, unico: 6 },
 		{ fecha: "14/07/2024", total: 1, unico: 1 },
+		{ fecha: "15/07/2024", total: 36, unico: 34 },
+		{ fecha: "16/07/2024", total: 33, unico: 32 },
+		{ fecha: "17/07/2024", total: 27, unico: 26 },
+		{ fecha: "18/07/2024", total: 63, unico: 61 },
+		{ fecha: "19/07/2024", total: 27, unico: 27 },
+		{ fecha: "20/07/2024", total: 6, unico: 6 },
+		{ fecha: "21/07/2024", total: 0, unico: 0 },
             ]
 			
 			
