actualizacion al 28 de julio de 2024

--- a/index.html
+++ b/index.html
@@ -229,6 +229,13 @@
 		{ fecha: "19/07/2024", total: 27, unico: 27 },
 		{ fecha: "20/07/2024", total: 6, unico: 6 },
 		{ fecha: "21/07/2024", total: 0, unico: 0 },
+		{ fecha: "22/07/2024", total: 60, unico: 59 },
+		{ fecha: "23/07/2024", total: 27, unico: 26 },
+		{ fecha: "24/07/2024", total: 125, unico: 123 },
+		{ fecha: "25/07/2024", total: 65, unico: 65 },
+		{ fecha: "26/07/2024", total: 28, unico: 24 },
+		{ fecha: "27/07/2024", total: 11, unico: 10 },
+		{ fecha: "28/07/2024", total: 0, unico: 0 },
             ]
 			
 			
