--- a/index.html
+++ b/index.html
@@ -236,6 +236,13 @@
 		{ fecha: "26/07/2024", total: 28, unico: 24 },
 		{ fecha: "27/07/2024", total: 11, unico: 10 },
 		{ fecha: "28/07/2024", total: 0, unico: 0 },
+		{ fecha: "29/07/2024", total: 44, unico: 42 },
+		{ fecha: "30/07/2024", total: 31, unico: 27 },
+		{ fecha: "31/07/2024", total: 40, unico: 36 },
+		{ fecha: "01/08/2024", total: 25, unico: 23 },
+		{ fecha: "02/08/2024", total: 22, unico: 20 },
+		{ fecha: "03/08/2024", total: 6, unico: 6 },
+		{ fecha: "04/08/2024", total: 0, unico: 0 },
             ]
 			
 			
