--- a/index.html
+++ b/index.html
@@ -243,6 +243,20 @@
 		{ fecha: "02/08/2024", total: 22, unico: 20 },
 		{ fecha: "03/08/2024", total: 6, unico: 6 },
 		{ fecha: "04/08/2024", total: 0, unico: 0 },
+		{ fecha: "05/08/2024", total: 52, unico: 49 },
+		{ fecha: "06/08/2024", total: 31, unico: 29 },
+		{ fecha: "07/08/2024", total: 25, unico: 25 },
+		{ fecha: "08/08/2024", total: 46, unico: 43 },
+		{ fecha: "09/08/2024", total: 22, unico: 21 },
+		{ fecha: "10/08/2024", total: 10, unico: 10 },
+		{ fecha: "11/08/2024", total: 0, unico: 0 },
+		{ fecha: "12/08/2024", total: 76, unico: 74 },
+		{ fecha: "13/08/2024", total: 42, unico: 38 },
+		{ fecha: "14/08/2024", total: 41, unico: 40 },
+		{ fecha: "15/08/2024", total: 37, unico: 36 },
+		{ fecha: "16/08/2024", total: 32, unico: 30 },
+		{ fecha: "17/08/2024", total: 6, unico: 6 },
+		{ fecha: "18/08/2024", total: 1, unico: 1 },
             ]
 			
 			
