--- a/index.html
+++ b/index.html
@@ -257,6 +257,13 @@
 		{ fecha: "16/08/2024", total: 32, unico: 30 },
 		{ fecha: "17/08/2024", total: 6, unico: 6 },
 		{ fecha: "18/08/2024", total: 1, unico: 1 },
+		{ fecha: "19/08/2024", total: 90, unico: 89 },
+		{ fecha: "20/08/2024", total: 65, unico: 62 },
+		{ fecha: "21/08/2024", total: 27, unico: 26 },
+		{ fecha: "22/08/2024", total: 55, unico: 49 },
+		{ fecha: "23/08/2024", total: 18, unico: 18 },
+		{ fecha: "24/08/2024", total: 13, unico: 13 },
+		{ fecha: "25/08/2024", total: 0, unico: 0 },
             ]
 			
 			
