--- a/index.html
+++ b/index.html
@@ -264,6 +264,12 @@
 		{ fecha: "23/08/2024", total: 18, unico: 18 },
 		{ fecha: "24/08/2024", total: 13, unico: 13 },
 		{ fecha: "25/08/2024", total: 0, unico: 0 },
+		{ fecha: "26/08/2024", total: 43, unico: 40 },
+		{ fecha: "27/08/2024", total: 43, unico: 40 },
+		{ fecha: "28/08/2024", total: 30, unico: 27 },
+		{ fecha: "29/08/2024", total: 33, unico: 32 },
+		{ fecha: "30/08/2024", total: 23, unico: 22 },
+		{ fecha: "31/08/2024", total: 10, unico: 9 },
             ]
 			
 			
