--- a/index.html
+++ b/index.html
@@ -270,6 +270,13 @@
 		{ fecha: "29/08/2024", total: 33, unico: 32 },
 		{ fecha: "30/08/2024", total: 23, unico: 22 },
 		{ fecha: "31/08/2024", total: 10, unico: 9 },
+		{ fecha: "01/09/2024", total: 2, unico: 2 },
+		{ fecha: "02/09/2024", total: 102, unico: 99 },
+		{ fecha: "03/09/2024", total: 75, unico: 74 },
+		{ fecha: "04/09/2024", total: 67, unico: 66 },
+		{ fecha: "05/09/2024", total: 45, unico: 43 },
+		{ fecha: "06/09/2024", total: 35, unico: 35 },
+		{ fecha: "07/09/2024", total: 12, unico: 12 },
             ]
 			
 			
