--- a/index.html
+++ b/index.html
@@ -277,6 +277,14 @@
 		{ fecha: "05/09/2024", total: 45, unico: 43 },
 		{ fecha: "06/09/2024", total: 35, unico: 35 },
 		{ fecha: "07/09/2024", total: 12, unico: 12 },
+		{ fecha: "08/09/2024", total: 1, unico: 1 },
+		{ fecha: "09/09/2024", total: 56, unico: 53 },
+		{ fecha: "10/09/2024", total: 42, unico: 39 },
+		{ fecha: "11/09/2024", total: 31, unico: 29 },
+		{ fecha: "12/09/2024", total: 31, unico: 30 },
+		{ fecha: "13/09/2024", total: 22, unico: 20 },
+		{ fecha: "14/09/2024", total: 7, unico: 7 },
+		{ fecha: "15/09/2024", total: 0, unico: 0 },
             ]
 			
 			
