--- a/index.html
+++ b/index.html
@@ -285,6 +285,21 @@
 		{ fecha: "13/09/2024", total: 22, unico: 20 },
 		{ fecha: "14/09/2024", total: 7, unico: 7 },
 		{ fecha: "15/09/2024", total: 0, unico: 0 },
+		{ fecha: "16/09/2024", total: 1, unico: 1 },
+		{ fecha: "17/09/2024", total: 26, unico: 26 },
+		{ fecha: "18/09/2024", total: 20, unico: 18 },
+		{ fecha: "19/09/2024", total: 33, unico: 30 },
+		{ fecha: "20/09/2024", total: 39, unico: 37 },
+		{ fecha: "21/09/2024", total: 14, unico: 14 },
+		{ fecha: "22/09/2024", total: 0, unico: 0 },
+		{ fecha: "23/09/2024", total: 39, unico: 38 },
+		{ fecha: "24/09/2024", total: 41, unico: 36 },
+		{ fecha: "25/09/2024", total: 37, unico: 37 },
+		{ fecha: "26/09/2024", total: 49, unico: 44 },
+		{ fecha: "27/09/2024", total: 16, unico: 15 },
+		{ fecha: "28/09/2024", total: 7, unico: 7 },
+		{ fecha: "29/09/2024", total: 0, unico: 0 },
+		{ fecha: "30/09/2024", total: 20, unico: 19 },
             ]
 			
 			
