--- a/index.html
+++ b/index.html
@@ -300,6 +300,12 @@
 		{ fecha: "28/09/2024", total: 7, unico: 7 },
 		{ fecha: "29/09/2024", total: 0, unico: 0 },
 		{ fecha: "30/09/2024", total: 20, unico: 19 },
+		{ fecha: "01/10/2024", total: 3, unico: 3 },
+		{ fecha: "02/10/2024", total: 20, unico: 18 },
+		{ fecha: "03/10/2024", total: 27, unico: 27 },
+		{ fecha: "04/10/2024", total: 22, unico: 22 },
+		{ fecha: "05/10/2024", total: 12, unico: 12 },
+		{ fecha: "06/10/2024", total: 0, unico: 0 },
             ]
 			
 			
